<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_forecast"
            android:layout_gravity="center_horizontal"
            style="@style/title_text" />

        <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/large_title" />

        <TextView
            android:id="@+id/weatherDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/x_large_text" />

        <RelativeLayout
            android:id="@+id/air_humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:paddingStart="10dp"
                android:text="@string/air_humidity"
                style="@style/checkBoxText"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/temperature_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:paddingEnd="10dp"
                style="@style/medium_text"
                tools:ignore="RelativeOverlap,RtlSymmetry" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wind_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:paddingStart="10dp"
                android:text="@string/wind_speed"
                style="@style/checkBoxText"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/humidity_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:paddingEnd="10dp"
                style="@style/medium_text"
                tools:ignore="RelativeOverlap,RtlSymmetry" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:paddingStart="10dp"
                android:text="@string/pressure"
                style="@style/checkBoxText"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/pressure_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:paddingEnd="10dp"
                style="@style/medium_text"
                tools:ignore="RelativeOverlap,RtlSymmetry" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>